Fixed overflowing text in search modal & page with text ellipsis

--- a/public/styles/components/search_modal.module.scss
+++ b/public/styles/components/search_modal.module.scss
@@ -101,7 +101,12 @@ section#search {
             flex-direction: column;
             align-items: center;
             row-gap: 9px;
-            h4 {
+            div.product_title {
+              width: 95%;
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              padding-bottom: 5px;
               text-align: center;
               font-family: "Kanit", sans-serif;
               font-weight: 300;
@@ -110,6 +115,15 @@ section#search {
               font-size: 1.6rem;
               margin-top: 1rem;
             }
+            // h4 {
+            //   text-align: center;
+            //   font-family: "Kanit", sans-serif;
+            //   font-weight: 300;
+            //   color: #000;
+            //   text-transform: capitalize;
+            //   font-size: 1.6rem;
+            //   margin-top: 1rem;
+            // }
             span.product_price {
               font-family: "Kanit", sans-serif;
               font-weight: 400;
