--- a/public/styles/pages/search/search.module.scss
+++ b/public/styles/pages/search/search.module.scss
@@ -75,7 +75,12 @@ main#main {
             flex-direction: column;
             align-items: center;
             row-gap: 9px;
-            h4 {
+            div.product_title {
+              width: 95%;
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              padding-bottom: 5px;
               text-align: center;
               font-family: "Kanit", sans-serif;
               font-weight: 300;
@@ -84,6 +89,15 @@ main#main {
               font-size: 1.6rem;
               margin-top: 1rem;
             }
+            // h4 {
+            //   text-align: center;
+            //   font-family: "Kanit", sans-serif;
+            //   font-weight: 300;
+            //   color: #000;
+            //   text-transform: capitalize;
+            //   font-size: 1.6rem;
+            //   margin-top: 1rem;
+            // }
             span.product_price {
               font-family: "Kanit", sans-serif;
               font-weight: 400;
